--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="icon" href="./src/assets/RTCACP-Logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created By MoXeR MMH" />
+  <meta name="description" content="RTCACP is a comprehensive solution designed to facilitate real-time communication and collaboration among teams. It provides a robust platform for instant messaging, file sharing, and project management. created By MoXeR MMH" />
   <title>RTCACP</title>
 </head>
 
